# the-no-shop

./: .gitignore  CLAUDE.md  LICENSE  README.md
.beads/: metadata.json
.claude-plugin/: marketplace.json
.claude/hooks/: session-start.sh
ai/research/: 2026-02-27-foldspace-lessons-learned.md
docs/plans/: 2026-03-04-playwright-skill-design.md  2026-03-04-playwright-skill-implementation.md  2026-03-05-notion-skill-design.md
plugins/brave-search/.claude-plugin/: plugin.json
plugins/cdp-cli/.claude-plugin/: plugin.json
plugins/excalidraw-diagram/.claude-plugin/: plugin.json
plugins/excalidraw-diagram/references/: .gitignore
plugins/foldspace-console/: package.json
plugins/foldspace-console/.claude-plugin/: plugin.json
plugins/foldspace-console/daemon/: index.ts
plugins/foldspace-console/hooks/: hooks.json
plugins/foldspace-console/scripts/: prompt.sh  session-end.sh  session-start.sh  stop.sh
plugins/foldspace-console/web/: index.html
plugins/kagi/.claude-plugin/: plugin.json
plugins/knowledge-web/.claude-plugin/: plugin.json
plugins/lat/: README.md  package.json  tsconfig.json
plugins/lat/.claude-plugin/: plugin.json
plugins/lat/daemon/: haiku.ts  index.ts  types.ts
plugins/lat/hooks/: hooks.json
plugins/lat/scripts/: prompt.sh  session-end.sh  session-start.sh  statusline.sh  stop.sh
tools/mcp-discovery/: pyproject.toml
tools/mcp-discovery/src/mcp_discovery/: __init__.py  agent.py  cli.py  dedup.py  discover.py  models.py  output.py  parser.py
tools/mcp-discovery/tests/: test_dedup.py  test_models.py  test_parser.py
(+51 files in other folders)
