[project]
name = "mcp-discovery"
version = "0.1.0"
description = "Blazingly fast MCP config aggregator and deduplicator"
readme = {text = "Blazingly fast MCP config discovery, aggregation, and deduplication.", content-type = "text/plain"}
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "click>=8.1.0",
    "rich>=13.0.0",
]

[project.scripts]
mcp-discovery = "mcp_discovery.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_discovery"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
